# My-Health-Management_System

./: authy.cpp  authy.h  calorie.tracker  calorie_tracker.cpp  calorie_tracker.h  main  main.cpp  meal_plans.cpp  meal_plans.h  workouts  workouts.h
Authentication/: authy.cpp  authy.h
Calorie_Tracker/: calorie_tracker.cpp  calorie_tracker.h
Meal_Plans/: meal_plans.cpp  meal_plans.h
My-Health-Management_System-main/SE_HealthApp/: CMakeLists.txt  main.cpp
My-Health-Management_System-main/SE_HealthApp/Calorie_Tracker/: calorie_tracker.cpp
My-Health-Management_System-main/SE_HealthApp/Meal_Plans/: meal_plans.cpp  meal_plans.h
My-Health-Management_System-main/SE_HealthApp/Workouts/: workouts.cpp  workouts.h
Workouts/: workouts.cpp  workouts.h
